Fixed layout on Firefox.

--- a/src/styles/style.1.8.2.less
+++ b/src/styles/style.1.8.2.less
@@ -394,6 +394,10 @@ li.active a{
 label.cursor-pointer {  
   cursor: pointer;
 }
+ul#menu{
+  margin-left: 0;
+  padding-left: 0;
+}
 #menu-toggle {
   display: none; /* hide the checkbox */
 }
